プロジェクト調整中

--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -17,7 +17,6 @@
       <Configuration>Release</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
-
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -44,34 +43,32 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
-
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
-  <ImportGroup Label="Shared" >
+  <ImportGroup Label="Shared">
   </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
@@ -85,7 +82,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
-
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -118,12 +114,16 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WINDOWS;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>./Src/Lib/DxLib;$(ProjectDir)Src/Lib/</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>./Src/Lib/DxLib;$(ProjectDir)Src/Lib/</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -132,18 +132,164 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WINDOWS;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>./Src/Lib/DxLib;$(ProjectDir)Src/Lib/</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>./Src/Lib/DxLib;$(ProjectDir)Src/Lib/</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
-
-  <ItemGroup></ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Src\Application.cpp" />
+    <ClCompile Include="Src\Common\Fader.cpp" />
+    <ClCompile Include="Src\Common\FontRegistry.cpp" />
+    <ClCompile Include="Src\Common\IntVector3.cpp" />
+    <ClCompile Include="Src\Common\Quaternion.cpp" />
+    <ClCompile Include="Src\Common\Vector2.cpp" />
+    <ClCompile Include="Src\FpsControl\FpsControl.cpp" />
+    <ClCompile Include="Src\main.cpp" />
+    <ClCompile Include="Src\Manager\Game\CollisionManager.cpp" />
+    <ClCompile Include="Src\Manager\Game\GravityManager.cpp" />
+    <ClCompile Include="Src\Manager\System\Camera.cpp" />
+    <ClCompile Include="Src\Manager\System\InputManager.cpp" />
+    <ClCompile Include="Src\Manager\System\KeyConfig.cpp" />
+    <ClCompile Include="Src\Manager\System\Resource.cpp" />
+    <ClCompile Include="Src\Manager\System\ResourceManager.cpp" />
+    <ClCompile Include="Src\Manager\System\SceneManager.cpp" />
+    <ClCompile Include="Src\Manager\System\SoundManager.cpp" />
+    <ClCompile Include="Src\Object\Common\AnimationController.cpp" />
+    <ClCompile Include="Src\Object\Common\Collider.cpp" />
+    <ClCompile Include="Src\Object\Common\EffectController.cpp" />
+    <ClCompile Include="Src\Object\Common\Geometry\Capsule.cpp" />
+    <ClCompile Include="Src\Object\Common\Geometry\Cube.cpp" />
+    <ClCompile Include="Src\Object\Common\Geometry\Geometry.cpp" />
+    <ClCompile Include="Src\Object\Common\Geometry\Line.cpp" />
+    <ClCompile Include="Src\Object\Common\Geometry\Model.cpp" />
+    <ClCompile Include="Src\Object\Common\Geometry\Sphere.cpp" />
+    <ClCompile Include="Src\Object\Common\Transform.cpp" />
+    <ClCompile Include="Src\Object\Grid.cpp" />
+    <ClCompile Include="Src\Object\ObjectBase.cpp" />
+    <ClCompile Include="Src\Renderer\ModelMaterial.cpp" />
+    <ClCompile Include="Src\Renderer\ModelRenderer.cpp" />
+    <ClCompile Include="Src\Renderer\PixelMaterial.cpp" />
+    <ClCompile Include="Src\Renderer\PixelRenderer.cpp" />
+    <ClCompile Include="Src\Renderer\VertexMaterial.cpp" />
+    <ClCompile Include="Src\Renderer\VertexRenderer.cpp" />
+    <ClCompile Include="Src\Utility\Utility.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Src\Application.h" />
+    <ClInclude Include="Src\Common\Fader.h" />
+    <ClInclude Include="Src\Common\FontRegistry.h" />
+    <ClInclude Include="Src\Common\IntVector3.h" />
+    <ClInclude Include="Src\Common\Quaternion.h" />
+    <ClInclude Include="Src\Common\Vector2.h" />
+    <ClInclude Include="Src\FpsControl\FpsControl.h" />
+    <ClInclude Include="Src\Lib\DxLib\DxCompileConfig.h" />
+    <ClInclude Include="Src\Lib\DxLib\DxDataType.h" />
+    <ClInclude Include="Src\Lib\DxLib\DxDataTypeWin.h" />
+    <ClInclude Include="Src\Lib\DxLib\DxFunctionWin.h" />
+    <ClInclude Include="Src\Lib\DxLib\DxLib.h" />
+    <ClInclude Include="Src\Lib\DxLib\Effekseer.h" />
+    <ClInclude Include="Src\Lib\DxLib\Effekseer.Modules.h" />
+    <ClInclude Include="Src\Lib\DxLib\Effekseer.SIMD.h" />
+    <ClInclude Include="Src\Lib\DxLib\EffekseerForDXLib.h" />
+    <ClInclude Include="Src\Lib\DxLib\EffekseerRendererDX11.h" />
+    <ClInclude Include="Src\Lib\DxLib\EffekseerRendererDX9.h" />
+    <ClInclude Include="Src\Lib\nlohmann\adl_serializer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\byte_container_with_subtype.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\abi_macros.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\conversions\from_json.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\conversions\to_chars.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\conversions\to_json.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\exceptions.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\hash.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\binary_reader.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\input_adapters.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\json_sax.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\lexer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\parser.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\position_t.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\internal_iterator.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\iteration_proxy.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\iterator_traits.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\iter_impl.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\json_reverse_iterator.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\primitive_iterator.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\json_custom_base_class.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\json_pointer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\json_ref.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\macro_scope.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\macro_unscope.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\call_std\begin.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\call_std\end.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\cpp_future.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\detected.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\identity_tag.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\is_sax.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\std_fs.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\type_traits.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\void_t.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\output\binary_writer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\output\output_adapters.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\output\serializer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\string_concat.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\string_escape.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\string_utils.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\value_t.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\json.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\json_fwd.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\ordered_map.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\thirdparty\hedley\hedley.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\thirdparty\hedley\hedley_undef.hpp" />
+    <ClInclude Include="Src\main.h" />
+    <ClInclude Include="Src\Manager\Game\CollisionManager.h" />
+    <ClInclude Include="Src\Manager\Game\GravityManager.h" />
+    <ClInclude Include="Src\Manager\System\Camera.h" />
+    <ClInclude Include="Src\Manager\System\InputManager.h" />
+    <ClInclude Include="Src\Manager\System\KeyConfig.h" />
+    <ClInclude Include="Src\Manager\System\Resource.h" />
+    <ClInclude Include="Src\Manager\System\ResourceManager.h" />
+    <ClInclude Include="Src\Manager\System\SceneManager.h" />
+    <ClInclude Include="Src\Manager\System\SoundManager.h" />
+    <ClInclude Include="Src\Object\AnimationController.h" />
+    <ClInclude Include="Src\Object\Collider.h" />
+    <ClInclude Include="Src\Object\Common\AnimationController.h" />
+    <ClInclude Include="Src\Object\Common\Collider.h" />
+    <ClInclude Include="Src\Object\Common\EffectController.h" />
+    <ClInclude Include="Src\Object\Common\Geometry\Capsule.h" />
+    <ClInclude Include="Src\Object\Common\Geometry\Cube.h" />
+    <ClInclude Include="Src\Object\Common\Geometry\Geometry.h" />
+    <ClInclude Include="Src\Object\Common\Geometry\Line.h" />
+    <ClInclude Include="Src\Object\Common\Geometry\Model.h" />
+    <ClInclude Include="Src\Object\Common\Geometry\Sphere.h" />
+    <ClInclude Include="Src\Object\Common\Transform.h" />
+    <ClInclude Include="Src\Object\EffectController.h" />
+    <ClInclude Include="Src\Object\Geometry\Capsule.h" />
+    <ClInclude Include="Src\Object\Geometry\Cube.h" />
+    <ClInclude Include="Src\Object\Geometry\Geometry.h" />
+    <ClInclude Include="Src\Object\Geometry\Line.h" />
+    <ClInclude Include="Src\Object\Geometry\Model.h" />
+    <ClInclude Include="Src\Object\Geometry\Sphere.h" />
+    <ClInclude Include="Src\Object\Grid.h" />
+    <ClInclude Include="Src\Object\ObjectBase.h" />
+    <ClInclude Include="Src\Object\Transform.h" />
+    <ClInclude Include="Src\Renderer\ModelMaterial.h" />
+    <ClInclude Include="Src\Renderer\ModelRenderer.h" />
+    <ClInclude Include="Src\Renderer\PixelMaterial.h" />
+    <ClInclude Include="Src\Renderer\PixelRenderer.h" />
+    <ClInclude Include="Src\Renderer\VertexMaterial.h" />
+    <ClInclude Include="Src\Renderer\VertexRenderer.h" />
+    <ClInclude Include="Src\Utility\Utility.h" />
+    <ClInclude Include="Src\Utility\UtilityTemplates.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
