移動、旋回の実装

--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Manager\Game\PlayerManager.cpp" />
     <ClCompile Include="Src\Object\Player\Action\MachineAction.cpp" />
     <ClCompile Include="Src\Object\Player\Action\CharacterAction.cpp" />
     <ClCompile Include="Src\Object\Common\Parameter.cpp" />
@@ -201,6 +202,7 @@
     <ClCompile Include="Src\Utility\Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Manager\Game\PlayerManager.h" />
     <ClInclude Include="Src\Object\Player\Action\MachineAction.h" />
     <ClInclude Include="Src\Object\Player\Action\CharacterAction.h" />
     <ClInclude Include="Src\Object\Common\Parameter.h" />
