--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -152,7 +152,7 @@
     <ClCompile Include="Src\Manager\Game\PlayerManager.cpp" />
     <ClCompile Include="Src\Object\Player\Action\MachineAction.cpp" />
     <ClCompile Include="Src\Object\Player\Action\CharacterAction.cpp" />
-    <ClCompile Include="Src\Object\Common\Parameter.cpp" />
+    <ClCompile Include="Src\Object\Player\Parameter\Parameter.cpp" />
     <ClCompile Include="Src\Object\Player\Action\ActionBase.cpp" />
     <ClCompile Include="Src\Object\Player\Logic\LogicBase.cpp" />
     <ClCompile Include="Src\Object\Player\Logic\NpcLogic.cpp" />
@@ -205,7 +205,7 @@
     <ClInclude Include="Src\Manager\Game\PlayerManager.h" />
     <ClInclude Include="Src\Object\Player\Action\MachineAction.h" />
     <ClInclude Include="Src\Object\Player\Action\CharacterAction.h" />
-    <ClInclude Include="Src\Object\Common\Parameter.h" />
+    <ClInclude Include="Src\Object\Player\Parameter\Parameter.h" />
     <ClInclude Include="Src\Object\Player\Action\ActionBase.h" />
     <ClInclude Include="Src\Object\Player\Logic\LogicBase.h" />
     <ClInclude Include="Src\Object\Player\Logic\NpcLogic.h" />
